--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
 body {
   margin: 0 auto;
   padding: 0;
   background-color: #eee;
-  font-family: 'open sans';
+  font-family: 'Open Sans', sans-serif;
+  ;
 }
 
 h1, h2 {
