--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400|Open+Sans:300,400');
 body {
   margin: 0 auto;
   padding: 0;
   background-color: #eee;
   font-family: 'Open Sans', sans-serif;
-  ;
 }
 
 h1, h2 {
@@ -27,16 +27,14 @@ nav {
 nav a {
   text-decoration: none;
   color: #181F22;
-  padding: 15px;
+  padding: 15px 3vw;
   letter-spacing: 3px;
-  margin: 0 3vw;
-  border-bottom: 2px solid transparent;
+  margin: 0;
   font-weight: lighter;
 }
 
 nav a:hover {
-  background: url('../partialbg.jpeg') no-repeat bottom;
-  background-size: cover;
+  background: url('../partial-bg-nav.jpg') bottom/cover no-repeat;
 }
 
 /* nav a:hover::after {
@@ -106,8 +104,7 @@ header {
   display: flex;
   width: 100%;
   height: 2px;
-  background: url('../partialbg.jpeg') no-repeat center fixed;
-  background-size: cover;
+  background: url('../partialbg.jpeg') bottom/cover no-repeat;
 }
 
 .about-container {
@@ -151,8 +148,7 @@ header {
   align-items: center;
   height: 40px;
   width: 0;
-  background: url('../partialbg.jpeg') no-repeat center fixed;
-  background-size: cover;
+  background: url('../partial-bg-nav.jpg') bottom/cover no-repeat;
   color: #eee;
   margin-top: 0;
   border-radius: 2px;
@@ -224,8 +220,13 @@ header {
   overflow: hidden;
 }
 
-.item iframe {
-  margin: 0 50px;
+#projects img {
+  width: 100%;
+  height: auto;
+}
+
+#projects img:hover {
+  opacity: 0.8;
 }
 
 .item-description {
@@ -336,8 +337,8 @@ i {
     font-size: 15px;
     text-decoration: none;
     letter-spacing: 1px;
-    padding: 15px 5px;
-    margin: 0 3vw;
+    padding: 15px 3vw;
+    margin: 0;
   }
   #about {
     display: flex;
