--- a/css/styles.css
+++ b/css/styles.css
@@ -67,13 +67,14 @@ header {
 
 .name-box {
   position: absolute;
-  left: 50px;
-  top: 50px;
+  left: 20%;
+  top: 10%;
   z-index: 3;
 }
 
 .name-box h1 {
   color: black;
+  font-size: 3rem
 }
 
 .name-box h2 {
@@ -94,8 +95,8 @@ header {
   position: absolute;
   right: -50px;
   width: auto;
-  height: 50vh;
-  bottom: -10%;
+  height: 60vh;
+  bottom: -12%;
   z-index: 0;
 }
 
@@ -361,6 +362,13 @@ i {
     letter-spacing: 1px;
     padding: 15px 3vw;
     margin: 0;
+  }
+  .name-box {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 10%;
+    z-index: 3;
   }
   #about {
     display: flex;
