--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@ header {
 .name-box h1 {
   text-transform: uppercase;
   color: #121A21;
-  font-size: 2rem;
+  font-size: 3rem;
   letter-spacing: 3px;
 }
 
@@ -83,7 +83,7 @@ header {
   font-family: 'Open Sans', sans-serifs;
   font-weight: lighter;
   color: #FF8255;
-  font-size: 2rem;
+  font-size: 3rem;
   letter-spacing: 3px;
 }
 
@@ -372,6 +372,19 @@ i {
     right: 0;
     top: 10%;
     z-index: 3;
+  }
+  .name-box h1 {
+    text-transform: uppercase;
+    color: #121A21;
+    font-size: 2rem;
+    letter-spacing: 3px;
+  }
+  .name-box h2 {
+    font-family: 'Open Sans', sans-serifs;
+    font-weight: lighter;
+    color: #FF8255;
+    font-size: 2rem;
+    letter-spacing: 3px;
   }
   #about {
     display: flex;
