--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 h1, h2 {
-  font-family: montserrat;
+  font-family: 'Montserrat', sans-serif;
   letter-spacing: 1px;
   margin: 0 auto;
   /* font-weight: lighter; */
@@ -67,7 +67,8 @@ header {
 
 .name-box {
   position: absolute;
-  left: 20%;
+  left: 0;
+  right: 0;
   top: 10%;
   z-index: 3;
 }
