--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,7 @@ header {
 #projects {
   display: flex;
   flex-direction: column;
-  margin: 0 auto 25px;
+  margin: 0 auto;
   width: 100%;
   background: rgba(40, 74, 88, 0.5);
 }
@@ -224,7 +224,33 @@ header {
   margin: 0 auto;
   flex-wrap: wrap;
   border-radius: 2px;
-  /* border: 1px solid red; */
+}
+
+.animation-element {
+  opacity: 0;
+  position: relative;
+}
+
+.animation-element.slide-left {
+  opacity: 0;
+  -moz-transition: all 500ms linear;
+  -webkit-transition: all 500ms linear;
+  -o-transition: all 500ms linear;
+  transition: all 500ms linear;
+  -moz-transform: translate3d(-100px, 0px, 0px);
+  -webkit-transform: translate3d(-100px, 0px, 0px);
+  -o-transform: translate(-100px, 0px);
+  -ms-transform: translate(-100px, 0px);
+  transform: translate3d(-100px, 0px, 0px);
+}
+
+.animation-element.slide-left.in-view {
+  opacity: 1;
+  -moz-transform: translate3d(0px, 0px, 0px);
+  -webkit-transform: translate3d(0px, 0px, 0px);
+  -o-transform: translate(0px, 0px);
+  -ms-transform: translate(0px, 0px);
+  transform: translate3d(0px, 0px, 0px);
 }
 
 .item {
@@ -310,6 +336,7 @@ form {
 }
 
 #contactsubmit {
+  margin-top: 25px;
   width: 100px;
   height: 50px;
   border: none;
