--- a/css/styles.css
+++ b/css/styles.css
@@ -386,6 +386,7 @@ form {
   font-weight: normal;
   text-align: center;
   background: url('../partial-bg-nav.jpg') bottom/cover no-repeat;
+  animation: submit-bounce linear 1.5s infinite;
 }
 
 #contactsubmit:hover {
@@ -415,6 +416,18 @@ i {
   color: #eeeeee;
   margin: 0 25px;
   padding: 0 0;
+}
+
+@keyframes submit-bounce {
+  0% {
+    margin-top: 25px;
+  }
+  50% {
+    margin-top: 35px;
+  }
+  100% {
+    margin-top: 25px;
+  }
 }
 
 @media screen and (max-width: 768px) {
