--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,6 @@ h1, h2 {
   font-family: 'Montserrat', sans-serif;
   letter-spacing: 1px;
   margin: 0 auto;
-  /* font-weight: lighter; */
 }
 
 /*  navbar */
@@ -27,6 +26,7 @@ nav {
 }
 
 nav a {
+  position: relative;
   text-decoration: none;
   color: #181F22;
   padding: 15px 3vw;
@@ -35,8 +35,31 @@ nav a {
   font-weight: lighter;
 }
 
-nav a:hover {
+nav a:hover::after {
+  content: "";
+  display: flex;
   background: url('../partial-bg-nav.jpg') bottom/cover no-repeat;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  animation: nav-slide linear .15s;
+}
+
+@keyframes nav-slide {
+  0% {
+    -webkit-transform: scale(0);
+    -ms-transform: scale(0);
+    transform: scale(0);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+  }
 }
 
 /* Header */
@@ -53,6 +76,29 @@ header {
   background-color: #eee;
   width: 100vw;
   height: 50vh;
+}
+
+.download-resume {
+  display: flex;
+  color: #eee;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  height: 50px;
+  border: 2px solid #eee;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  z-index: 5;
+  border-radius: 2px;
+}
+
+.download-resume:hover {
+  color: #FF8255;
+  border: 2px solid #FF8255;
+  cursor: pointer;
 }
 
 .name-box {
@@ -392,6 +438,7 @@ form {
 #contactsubmit:hover {
   background: url('../partial-bg-nav.jpg') bottom/cover no-repeat;
   opacity: .75;
+  cursor: pointer;
 }
 
 footer {
