--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,8 @@ header {
 }
 
 .vid-container {
+  display: flex;
+  height: 100%;
   position: absolute;
   left: 0;
   top: 0;
@@ -499,6 +501,12 @@ i {
   }
 }
 
+@media screen and (max-width: 980px) {
+  .vid-container {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 768px) {
   nav a {
     font-size: 15px;
@@ -506,9 +514,6 @@ i {
     letter-spacing: 1px;
     padding: 15px 3vw;
     margin: 0;
-  }
-  .vid-container {
-    display: none;
   }
   .name-box {
     position: absolute;
