--- a/css/styles.css
+++ b/css/styles.css
@@ -91,8 +91,8 @@ header {
   position: absolute;
   left: 0;
   top: 0;
-  -webkit-clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
-  clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+  -webkit-clip-path: polygon(0 3%, 100% 0%, 75% 100%, 0% 100%);
+  clip-path: polygon(0 3%, 100% 0%, 75% 100%, 0% 100%);
 }
 
 header video {
