--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400|Open+Sans:300,400');
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0 auto;
   padding: 0;
@@ -11,6 +15,15 @@ h1, h2 {
   font-family: 'Montserrat', sans-serif;
   letter-spacing: 1px;
   margin: 0 auto;
+}
+
+p {
+  line-height: 150%;
+  width: 50%;
+  color: #181F22;
+  font-size: 18px;
+  font-weight: lighter;
+  text-align: center;
 }
 
 /*  navbar */
@@ -87,10 +100,10 @@ header {
 
 .vid-container {
   display: flex;
-  width: 50%;
+  width: auto;
   height: 100%;
   position: absolute;
-  left: 5%;
+  left: 0;
   top: 0;
   bottom: 0;
   -webkit-clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
@@ -98,8 +111,9 @@ header {
 }
 
 header video {
-  height: auto;
-  width: 100%;
+  height: 100%;
+  width: auto;
+  opacity: .8;
 }
 
 .download-resume {
@@ -201,7 +215,7 @@ header video {
   justify-content: space-between;
   align-items: center;
   background-color: inherit;
-  margin: 0 auto;
+  margin: 0 auto 50px;
   flex-wrap: wrap;
   border-radius: 2px;
   /* border: 1px solid red; */
@@ -394,15 +408,29 @@ header video {
 }
 
 #contact {
-  position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
   text-align: center;
   width: 100%;
-  min-height: 80vh;
   background-color: #eee;
   margin-top: 0;
   /* border: 1px solid red; */
+}
+
+.contact-container {
+  display: flex;
+  width: 50vw;
+  /* height: 300px; */
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 50px;
+  /* border: 1px solid red; */
+}
+
+.contact-button:hover {
+  cursor: pointer;
 }
 
 form {
@@ -410,46 +438,39 @@ form {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 50px auto 25px;
-  border-radius: 5px;
-  width: 50vw;
+  border-radius: 2px;
+  width: 100%;
   text-align: center;
   /* border: 1px solid red; */
 }
 
-.input-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+input {
   width: 100%;
   height: 50px;
-}
-
-.input-container input {
-  display: block;
+  margin: 5px auto;
   border: none;
-  height: 100%;
-  width: 48%;
   border-radius: 2px;
-  padding: 0;
-  margin: 0;
+  -webkit-box-shadow: 6px 13px 93px 10px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 6px 13px 93px 10px rgba(0, 0, 0, 0.15);
+  box-shadow: 6px 13px 93px 10px rgba(0, 0, 0, 0.15);
 }
 
 .form-text {
   width: 100%;
-  height: 50px;
+  height: 100px;
   border: none;
   border-radius: 2px;
   letter-spacing: 1px;
   font-size: 15px;
   font-weight: lighter;
   margin: 5px auto;
+  -webkit-box-shadow: 6px 13px 93px 10px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 6px 13px 93px 10px rgba(0, 0, 0, 0.15);
+  box-shadow: 6px 13px 93px 10px rgba(0, 0, 0, 0.15);
 }
 
 #contactsubmit {
-  position: absolute;
   color: #eee;
-  bottom: 100px;
   width: 100px;
   height: 50px;
   border: none;
@@ -458,6 +479,9 @@ form {
   font-weight: normal;
   text-align: center;
   background: url('../partial-bg-nav.jpg') bottom/cover no-repeat;
+  -webkit-box-shadow: 6px 13px 93px 10px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 6px 13px 93px 10px rgba(0, 0, 0, 0.15);
+  box-shadow: 6px 13px 93px 10px rgba(0, 0, 0, 0.15);
 }
 
 #contactsubmit:hover {
@@ -577,5 +601,15 @@ i {
     width: 90%;
     padding: 0 10px;
     margin: 50px auto;
+  }
+  .contact-container {
+    display: flex;
+    width: 80vw;
+    /* height: 300px; */
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 50px;
+    /* border: 1px solid red; */
   }
 }
