--- a/css/styles.css
+++ b/css/styles.css
@@ -91,7 +91,7 @@ header {
   overflow: hidden;
   background-color: #eee;
   width: 100vw;
-  height: 500px;
+  height: 60vh;
 }
 
 .vid-container {
