--- a/css/styles.css
+++ b/css/styles.css
@@ -322,6 +322,7 @@ header video {
   margin: 0 auto;
   flex-wrap: wrap;
   border-radius: 2px;
+  overflow: hidden;
 }
 
 .animation-element {
@@ -556,7 +557,7 @@ i {
   }
   .about-container p {
     width: 90%;
-    padding: 0 10px;
+    padding: 0;
     margin: 0 auto;
   }
   .specialty {
