--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
-h1, h2 {
+h1, h2, h3 {
   font-family: 'Montserrat', sans-serif;
   letter-spacing: 1px;
   margin: 0 auto;
