--- a/css/styles.css
+++ b/css/styles.css
@@ -417,7 +417,7 @@ header video {
 
 .contact-container {
   display: flex;
-  width: 50vw;
+  width: 30vw;
   /* height: 300px; */
   justify-content: center;
   align-items: center;
@@ -461,6 +461,7 @@ input {
 }
 
 #contactsubmit {
+  position: relative;
   color: #eee;
   width: 100px;
   height: 50px;
@@ -476,7 +477,8 @@ input {
   background: url('../partial-bg-nav.jpg') bottom/cover no-repeat;
   opacity: .75;
   cursor: pointer;
-  animation: submit-bounce linear 1s infinite;
+  top: 3px;
+  /* animation: submit-bounce linear 1s infinite; */
 }
 
 footer {
