--- a/css/styles.css
+++ b/css/styles.css
@@ -477,7 +477,7 @@ input {
   background: url('../partial-bg-nav.jpg') bottom/cover no-repeat;
   opacity: .75;
   cursor: pointer;
-  top: 3px;
+  top: 5px;
   /* animation: submit-bounce linear 1s infinite; */
 }
 
@@ -496,11 +496,12 @@ footer {
   align-items: center;
   width: 100%;
   height: 100px;
-  background-color: #181F22;
+  background-color: #eee;
 }
 
 i {
-  color: #eeeeee;
+  color: #181F22;
+  opacity: .9;
   margin: 0 15px;
   padding: 0 0;
 }
