--- a/css/styles.css
+++ b/css/styles.css
@@ -585,7 +585,7 @@ i {
   .item-description {
     width: 90%;
     padding: 0 10px;
-    margin: 50px auto;
+    margin: 0 auto;
   }
   .contact-container {
     display: flex;
