--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,51 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400|Open+Sans:300,400');
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after, q:before, q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+strong, b {
+  font-weight: bold;
+}
+
+em, i {
+  font-style: italic;
+}
+
+a img {
+  border: none;
+}
+
+/* END RESET*/
+
 * {
   box-sizing: border-box;
 }
@@ -24,11 +70,16 @@ p {
 
 /*  navbar */
 
+.burger-nav {
+  display: none;
+}
+
 nav {
   position: fixed;
   top: 0;
   display: flex;
   width: 100%;
+  height: 50px;
   justify-content: center;
   background-color: #eee;
   z-index: 100;
@@ -519,12 +570,69 @@ i {
 }
 
 @media screen and (max-width: 768px) {
-  nav a {
-    font-size: 15px;
-    text-decoration: none;
-    letter-spacing: 1px;
-    padding: 15px 3vw;
+  .hamburger {
+    position: fixed;
+    /* border: 1px solid red; */
+    padding: 0;
     margin: 0;
+    cursor: pointer;
+    top: 0;
+    right: 10px;
+    z-index: 101;
+  }
+  .bar1, .bar2, .bar3 {
+    height: 3px;
+    width: 40px;
+    margin: 10px auto;
+    border-radius: 25%;
+    background: url('../partial-bg-nav.jpg');
+    -webkit-transform: rotate(0) translate(0, 0);
+    transform: rotate(0) translate(0, 0);
+    transition: all .35s cubic-bezier(0.785, 0.135, 0.150, 0.860);
+  }
+  /* Rotate first bar */
+  .change .bar1 {
+    -webkit-transform: rotate(-45deg) translate(-10px, 10px);
+    transform: rotate(-45deg) translate(-10px, 9px);
+    transition: all .35s cubic-bezier(0.785, 0.135, 0.150, 0.860);
+  }
+  /* Fade out the second bar */
+  .change .bar2 {
+    opacity: 0;
+    transition: all .35s cubic-bezier(0.785, 0.135, 0.150, 0.860);
+  }
+  /* Rotate last bar */
+  .change .bar3 {
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg) translate(-8px, -9px);
+    transition: all .35s cubic-bezier(0.785, 0.135, 0.150, 0.860);
+  }
+  .burger-nav {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    background-color: #eee;
+    z-index: 99;
+    right: 0;
+    top: 50px;
+    transform: translateY(-300px);
+    transition: transform .35s cubic-bezier(0.785, 0.135, 0.150, 0.860);
+  }
+  .burger-transition {
+    transform: translateY(0);
+    transition: transform .35s cubic-bezier(0.785, 0.135, 0.150, 0.860);
+  }
+  .burger-nav a {
+    text-decoration: none;
+    color: #333;
+    font-size: 24px;
+    margin: 20px auto;
+    font-weight: lighter;
+  }
+  .burger-nav a:hover {}
+  nav a {
+    display: none;
   }
   .vid-container {
     display: none;
