--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,7 @@ nav {
 }
 
 nav a {
+  text-transform: uppercase;
   position: relative;
   text-decoration: none;
   color: #181F22;
@@ -616,23 +617,21 @@ i {
     z-index: 101;
     right: 0;
     top: 0;
-    opacity: 0;
     transform: translateY(-300px);
-    transition: all .35s cubic-bezier(0.785, 0.135, 0.150, 0.860);
+    transition: transform .35s cubic-bezier(0.785, 0.135, 0.150, 0.860);
   }
   .burger-transition {
-    opacity: 1;
     transform: translateY(0);
     transition: all .35s cubic-bezier(0.785, 0.135, 0.150, 0.860);
   }
   .burger-nav a {
     text-decoration: none;
+    text-transform: uppercase;
     color: #333;
     font-size: 18px;
     margin: 20px auto;
     font-weight: lighter;
   }
-  .burger-nav a:hover {}
   nav a {
     display: none;
   }
