--- a/css/styles.css
+++ b/css/styles.css
@@ -617,10 +617,12 @@ i {
     z-index: 101;
     right: 0;
     top: 0;
+    opacity: 0;
     transform: translateY(-300px);
-    transition: transform .35s cubic-bezier(0.785, 0.135, 0.150, 0.860);
+    transition: transform .35s cubic-bezier(0.785, 0.135, 0.150, 0.860), opacity .35s cubic-bezier(0.785, 0.135, 0.150, 0.860);
   }
   .burger-transition {
+    opacity: 1;
     transform: translateY(0);
     transition: all .35s cubic-bezier(0.785, 0.135, 0.150, 0.860);
   }
